[gd_scene load_steps=5 format=3 uid="uid://doxc2dd40l64h"]

[ext_resource type="Script" path="res://scenes/world/world.gd" id="1_x0ocp"]
[ext_resource type="Texture2D" uid="uid://djicaxrc64l40" path="res://assets/bgBlue.jpg" id="2_p6k0n"]
[ext_resource type="PackedScene" uid="uid://m16fsm14pcgn" path="res://scenes/cookie/cookie.tscn" id="2_v33oy"]
[ext_resource type="PackedScene" uid="uid://bbjbgdtkbwgt0" path="res://scenes/store/store.tscn" id="4_j4ugq"]

[node name="World" type="Node2D"]
script = ExtResource("1_x0ocp")

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_p6k0n")
stretch_mode = 1

[node name="Cookie" parent="." instance=ExtResource("2_v33oy")]
position = Vector2(224, 320)

[node name="Control" type="CanvasLayer" parent="."]

[node name="Store" parent="Control" instance=ExtResource("4_j4ugq")]
anchors_preset = 11
anchor_left = 1.0
grow_horizontal = 0

[node name="ScoreContainer" type="MarginContainer" parent="Control"]
offset_right = 211.0
offset_bottom = 109.0
theme_override_constants/margin_left = 160
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 160
theme_override_constants/margin_bottom = 80

[node name="Label" type="Label" parent="Control/ScoreContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 32
text = "0 Cookies"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="add_score" from="." to="." method="_on_add_score"]
[connection signal="remove_score" from="." to="." method="_on_remove_score"]
